# ModLinksShaVerifier

./: .gitignore  Cargo.toml
.github/workflows/: main.yml  test.yml
src/: main.rs
src/model/: apilinks.rs  file_def.rs  links.rs  mod.rs  modlinks.rs  verifiable.rs
test/apilinks/: incorrect.xml  invalid.xml
test/modlinks/: incorrect.xml  invalid.xml
