[package]
name = "modlinks-sha-verifier"
version = "0.1.0"
edition = "2021"
authors = [
    "Clazex <clazex.y@gmail.com>",
    "jngo102 <jngo102@aim.com>"
]
license = "MIT"
publish = false

[dependencies]
anyhow = "^1.0.58"
base16ct = { version = "^0.1.1", features = ["std"] }
quick-xml = { version = "^0.23.0", features = ["serialize"] }
rayon = "^1.5.3"
reqwest = { version = "^0.11.11", features = ["blocking", "brotli", "deflate", "gzip"] }
serde = { version = "^1.0.137", features = ["derive"] }
sha2 = "^0.10.2"

[profile.release]
lto = true
codegen-units = 1
